syntaxes/operand.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { line: peg$parseline },
      peg$startRuleFunction  = peg$parseline,

      peg$c0 = "",
      peg$c1 = function() { error("A line should be an assignment, an assembly instruction (with perhaps a label and some operands), a directive, or a comment") },
      peg$c2 = "=",
      peg$c3 = peg$literalExpectation("=", false),
      peg$c4 = ":",
      peg$c5 = peg$literalExpectation(":", false),
      peg$c6 = "(",
      peg$c7 = peg$literalExpectation("(", false),
      peg$c8 = ")",
      peg$c9 = peg$literalExpectation(")", false),
      peg$c10 = "+",
      peg$c11 = peg$literalExpectation("+", false),
      peg$c12 = "@",
      peg$c13 = peg$literalExpectation("@", false),
      peg$c14 = ")+",
      peg$c15 = peg$literalExpectation(")+", false),
      peg$c16 = "@(",
      peg$c17 = peg$literalExpectation("@(", false),
      peg$c18 = "-(",
      peg$c19 = peg$literalExpectation("-(", false),
      peg$c20 = "@-(",
      peg$c21 = peg$literalExpectation("@-(", false),
      peg$c22 = "#",
      peg$c23 = peg$literalExpectation("#", false),
      peg$c24 = "@#",
      peg$c25 = peg$literalExpectation("@#", false),
      peg$c26 = ",",
      peg$c27 = peg$literalExpectation(",", false),
      peg$c28 = "mov",
      peg$c29 = peg$literalExpectation("mov", false),
      peg$c30 = "cmp",
      peg$c31 = peg$literalExpectation("cmp", false),
      peg$c32 = "bit",
      peg$c33 = peg$literalExpectation("bit", false),
      peg$c34 = "bic",
      peg$c35 = peg$literalExpectation("bic", false),
      peg$c36 = "bis",
      peg$c37 = peg$literalExpectation("bis", false),
      peg$c38 = "add",
      peg$c39 = peg$literalExpectation("add", false),
      peg$c40 = "sub",
      peg$c41 = peg$literalExpectation("sub", false),
      peg$c42 = "clr",
      peg$c43 = peg$literalExpectation("clr", false),
      peg$c44 = "com",
      peg$c45 = peg$literalExpectation("com", false),
      peg$c46 = "inc",
      peg$c47 = peg$literalExpectation("inc", false),
      peg$c48 = "dec",
      peg$c49 = peg$literalExpectation("dec", false),
      peg$c50 = "neg",
      peg$c51 = peg$literalExpectation("neg", false),
      peg$c52 = "adc",
      peg$c53 = peg$literalExpectation("adc", false),
      peg$c54 = "sbc",
      peg$c55 = peg$literalExpectation("sbc", false),
      peg$c56 = "tst",
      peg$c57 = peg$literalExpectation("tst", false),
      peg$c58 = "ror",
      peg$c59 = peg$literalExpectation("ror", false),
      peg$c60 = "rol",
      peg$c61 = peg$literalExpectation("rol", false),
      peg$c62 = "asr",
      peg$c63 = peg$literalExpectation("asr", false),
      peg$c64 = "asl",
      peg$c65 = peg$literalExpectation("asl", false),
      peg$c66 = "jmp",
      peg$c67 = peg$literalExpectation("jmp", false),
      peg$c68 = "swab",
      peg$c69 = peg$literalExpectation("swab", false),
      peg$c70 = "halt",
      peg$c71 = peg$literalExpectation("halt", false),
      peg$c72 = "wait",
      peg$c73 = peg$literalExpectation("wait", false),
      peg$c74 = "rti",
      peg$c75 = peg$literalExpectation("rti", false),
      peg$c76 = "reset",
      peg$c77 = peg$literalExpectation("reset", false),
      peg$c78 = "clc",
      peg$c79 = peg$literalExpectation("clc", false),
      peg$c80 = "sec",
      peg$c81 = peg$literalExpectation("sec", false),
      peg$c82 = "clv",
      peg$c83 = peg$literalExpectation("clv", false),
      peg$c84 = "sev",
      peg$c85 = peg$literalExpectation("sev", false),
      peg$c86 = "clz",
      peg$c87 = peg$literalExpectation("clz", false),
      peg$c88 = "sez",
      peg$c89 = peg$literalExpectation("sez", false),
      peg$c90 = "cln",
      peg$c91 = peg$literalExpectation("cln", false),
      peg$c92 = "sen",
      peg$c93 = peg$literalExpectation("sen", false),
      peg$c94 = "cnz",
      peg$c95 = peg$literalExpectation("cnz", false),
      peg$c96 = "ccc",
      peg$c97 = peg$literalExpectation("ccc", false),
      peg$c98 = "scc",
      peg$c99 = peg$literalExpectation("scc", false),
      peg$c100 = "nop",
      peg$c101 = peg$literalExpectation("nop", false),
      peg$c102 = "br",
      peg$c103 = peg$literalExpectation("br", false),
      peg$c104 = "bne",
      peg$c105 = peg$literalExpectation("bne", false),
      peg$c106 = "beq",
      peg$c107 = peg$literalExpectation("beq", false),
      peg$c108 = "bge",
      peg$c109 = peg$literalExpectation("bge", false),
      peg$c110 = "blt",
      peg$c111 = peg$literalExpectation("blt", false),
      peg$c112 = "ble",
      peg$c113 = peg$literalExpectation("ble", false),
      peg$c114 = "bpl",
      peg$c115 = peg$literalExpectation("bpl", false),
      peg$c116 = "bmi",
      peg$c117 = peg$literalExpectation("bmi", false),
      peg$c118 = "bhi",
      peg$c119 = peg$literalExpectation("bhi", false),
      peg$c120 = "blos",
      peg$c121 = peg$literalExpectation("blos", false),
      peg$c122 = "bvc",
      peg$c123 = peg$literalExpectation("bvc", false),
      peg$c124 = "bvs",
      peg$c125 = peg$literalExpectation("bvs", false),
      peg$c126 = "bcc",
      peg$c127 = peg$literalExpectation("bcc", false),
      peg$c128 = "bhis",
      peg$c129 = peg$literalExpectation("bhis", false),
      peg$c130 = "bcs",
      peg$c131 = peg$literalExpectation("bcs", false),
      peg$c132 = "blo",
      peg$c133 = peg$literalExpectation("blo", false),
      peg$c134 = "jsr",
      peg$c135 = peg$literalExpectation("jsr", false),
      peg$c136 = "rts",
      peg$c137 = peg$literalExpectation("rts", false),
      peg$c138 = "iot",
      peg$c139 = peg$literalExpectation("iot", false),
      peg$c140 = "emt",
      peg$c141 = peg$literalExpectation("emt", false),
      peg$c142 = "trap",
      peg$c143 = peg$literalExpectation("trap", false),
      peg$c144 = ".end",
      peg$c145 = peg$literalExpectation(".end", false),
      peg$c146 = ";",
      peg$c147 = peg$literalExpectation(";", false),
      peg$c148 = peg$anyExpectation(),
      peg$c149 = function(ch) { return ch.map(pair => pair[1]).join("") },
      peg$c150 = "b",
      peg$c151 = peg$literalExpectation("b", true),
      peg$c152 = /^[rR%]/,
      peg$c153 = peg$classExpectation(["r", "R", "%"], false, false),
      peg$c154 = /^[0-7]/,
      peg$c155 = peg$classExpectation([["0", "7"]], false, false),
      peg$c156 = function(n) { return parseInt(n) },
      peg$c157 = "sp",
      peg$c158 = peg$literalExpectation("sp", true),
      peg$c159 = function() { return 6 },
      peg$c160 = "pc",
      peg$c161 = peg$literalExpectation("pc", true),
      peg$c162 = function() { return 7 },
      peg$c163 = /^[\-+*\/&!]/,
      peg$c164 = peg$classExpectation(["-", "+", "*", "/", "&", "!"], false, false),
      peg$c165 = "<",
      peg$c166 = peg$literalExpectation("<", false),
      peg$c167 = ">",
      peg$c168 = peg$literalExpectation(">", false),
      peg$c169 = "'",
      peg$c170 = peg$literalExpectation("'", false),
      peg$c171 = "\"",
      peg$c172 = peg$literalExpectation("\"", false),
      peg$c173 = /^[\r\n\f]/,
      peg$c174 = peg$classExpectation(["\r", "\n", "\f"], false, false),
      peg$c175 = "^C",
      peg$c176 = peg$literalExpectation("^C", false),
      peg$c177 = "^B",
      peg$c178 = peg$literalExpectation("^B", false),
      peg$c179 = "^D",
      peg$c180 = peg$literalExpectation("^D", false),
      peg$c181 = "^F",
      peg$c182 = peg$literalExpectation("^F", false),
      peg$c183 = "^O",
      peg$c184 = peg$literalExpectation("^O", false),
      peg$c185 = /^[01]/,
      peg$c186 = peg$classExpectation(["0", "1"], false, false),
      peg$c187 = /^[0-9]/,
      peg$c188 = peg$classExpectation([["0", "9"]], false, false),
      peg$c189 = ".",
      peg$c190 = peg$literalExpectation(".", false),
      peg$c191 = /^[a-zA-Z$.]/,
      peg$c192 = peg$classExpectation([["a", "z"], ["A", "Z"], "$", "."], false, false),
      peg$c193 = /^[a-zA-Z0-9$.]/,
      peg$c194 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "$", "."], false, false),
      peg$c195 = /^[ \t]/,
      peg$c196 = peg$classExpectation([" ", "\t"], false, false),
      peg$c197 = "\r",
      peg$c198 = peg$literalExpectation("\r", false),
      peg$c199 = "\n",
      peg$c200 = peg$literalExpectation("\n", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseline() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseline_content();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseEOL();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          if (s4 !== peg$FAILED) {
            s1 = [s1, s2, s3, s4];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$c0;
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseline_content() {
    var s0, s1, s2;

    s0 = peg$parsedirect_assignment();
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parselabel();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parselabel();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseopcode();
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = [];
        s1 = peg$parselabel();
        if (s1 !== peg$FAILED) {
          while (s1 !== peg$FAILED) {
            s0.push(s1);
            s1 = peg$parselabel();
          }
        } else {
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$parsecomment();
          if (s0 === peg$FAILED) {
            s0 = peg$c0;
          }
        }
      }
    }

    return s0;
  }

  function peg$parsedirect_assignment() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsesymbol();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 61) {
          s3 = peg$c2;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c3); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseexpression();
            if (s5 !== peg$FAILED) {
              s1 = [s1, s2, s3, s4, s5];
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parselabel() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsesymbol();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 58) {
        s2 = peg$c4;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 58) {
          s3 = peg$c4;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s1 = [s1, s2, s3];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseoperator() {
    var s0;

    s0 = peg$parsedirective();
    if (s0 === peg$FAILED) {
      s0 = peg$parseopcode();
    }

    return s0;
  }

  function peg$parsedeferred_register_mode() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c6;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseregister_name();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 41) {
          s3 = peg$c8;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$currPos;
          peg$silentFails++;
          if (input.charCodeAt(peg$currPos) === 43) {
            s5 = peg$c10;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c11); }
          }
          peg$silentFails--;
          if (s5 === peg$FAILED) {
            s4 = void 0;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            s1 = [s1, s2, s3, s4];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 64) {
        s1 = peg$c12;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c13); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseregister_name();
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseautoincrement_mode() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c6;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseregister_name();
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c14) {
          s3 = peg$c14;
          peg$currPos += 2;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c15); }
        }
        if (s3 !== peg$FAILED) {
          s1 = [s1, s2, s3];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsedeferred_autoincrement_mode() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c16) {
      s1 = peg$c16;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c17); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseregister_name();
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c14) {
          s3 = peg$c14;
          peg$currPos += 2;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c15); }
        }
        if (s3 !== peg$FAILED) {
          s1 = [s1, s2, s3];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseautodecrement_mode() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c18) {
      s1 = peg$c18;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c19); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseregister_name();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 41) {
          s3 = peg$c8;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
        if (s3 !== peg$FAILED) {
          s1 = [s1, s2, s3];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsedeferred_autodecrement_mode() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c20) {
      s1 = peg$c20;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c21); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseregister_name();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 41) {
          s3 = peg$c8;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
        if (s3 !== peg$FAILED) {
          s1 = [s1, s2, s3];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseindex_mode() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parseexpression();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 40) {
        s2 = peg$c6;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseregister_name();
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 41) {
            s4 = peg$c8;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c9); }
          }
          if (s4 !== peg$FAILED) {
            s1 = [s1, s2, s3, s4];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsedeferred_index_mode() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parseexpression();
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 2) === peg$c16) {
        s2 = peg$c16;
        peg$currPos += 2;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c17); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseregister_name();
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 41) {
            s4 = peg$c8;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c9); }
          }
          if (s4 !== peg$FAILED) {
            s1 = [s1, s2, s3, s4];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseimmediate_mode() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 35) {
      s1 = peg$c22;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c23); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseexpression();
      if (s2 !== peg$FAILED) {
        s1 = [s1, s2];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsedeferred_immediate_mode() {
    var s0, s1, s2;
